small text changes

--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -9,9 +9,9 @@
 \usepackage{bm}
 
 \newcommand{\columbia}{1}
-\newcommand{\oxford}{2}
-\newcommand{\uw}{3}
-\newcommand{\princeton}{4}
+\newcommand{\oxford}{3j}
+\newcommand{\uw}{4}
+\newcommand{\princeton}{2}
 \newcommand{\naigrain}{333}
 \newcommand{\nmcquillan}{100}
 \newcommand{\kepexample}{1430163}
@@ -57,8 +57,8 @@ University, NY, NY, RuthAngus@gmail.com}
 UK}
 \altaffiltext{\uw}{Department of Astronomy, University of Washington, Seattle,
 WA}
-\altaffiltext{\princeton}{Department of Astrophysical Sciences, Princeton University,
-Princeton, NJ}
+\altaffiltext{\princeton}{Department of Astrophysical Sciences, Princeton
+University,  Princeton, NJ}
 
 \begin{abstract}
 The light curves of spotted, rotating stars are often non-sinusoidal and
@@ -96,8 +96,8 @@ This method eliminates the need to define a heuristic detection criterion such
 as are often used in the literature: a light curve that does not contain a
 rotation signal will return the prior PDF.
 Furthermore, the ACF method is not applicable to unevenly spaced data,
-therefore inappropriate for the ~$10^7$ stellar light curves expected to be
-produced by \LSST\ and \Wfirst.
+therefore it is inappropriate for the ~$10^7$ stellar light curves expected
+to be produced by \LSST\ unlike the GP method.
 % Furthermore, the improvement is expected to be even more dramatic when applied
 % to real, noisy {\it Kepler} light curves, since the GP method is well suited
 % to modelling rotation signals and correlated noise simultaneously.
@@ -160,8 +160,8 @@ A drawback of the ACF method however, is that it requires data to be
 evenly-spaced\footnote{\citet{Edelson1988} describe a method for computing
 ACFs for unevenly-spaced data.} which is not exactly the case with \Kepler\
 light curves (although in many cases it can be approximated as uniformly
-sampled) and not nearly the case for future large-scale survey instruments,
-\LSST\ and \Wfirst.
+sampled) and not nearly the case for the future large-scale survey instrument,
+\LSST.
 An ACF is also an operation performed on the data, not a generative model of
 the data and is therefore not inherently probabilistic.
 For this reason it is very difficult to estimate the uncertainty on an ACF
@@ -577,23 +577,22 @@ noise.
 Here, the parameters describing the correlated noise are what we are
 interested in and our mean model is simply a straight line at $y=0$.
 
-Sampling the posterior described above presents several challenges:
+Sampling the posterior PDF described above presents several challenges:
 \begin{itemize}
 \item Evaluating $\mathcal L$ for an entire \Kepler\ lightcurve
 ($\sim$40,000 points) takes about $\sim$5\,s--- too computationally expensive
-to perform inference on large numbers of light curves\footnote{All computational
-times cited in this section are based on evaluations on a
-single core of a 2015 Macbook Pro, 3.1 GHz Intel Core i7.}.  The matrix operations
-necessary to evaluate the GP likelihood\footnote{These operations use
-the fast matrix solver
-HODLR \citep{Ambikasaran2014}, implemented in the {\tt george} \citep{George}
-python package.} scale as $N\ln(N)^2$, where $N$ is
-the number of data points in the light curve.
+to perform inference on large numbers of light curves\footnote{All
+computational times cited in this section are based on evaluations on a
+single core of a 2015 Macbook Pro, 3.1 GHz Intel Core i7.}.
+The matrix operations necessary to evaluate the GP likelihood\footnote{These
+operations use the fast matrix solver HODLR \citep{Ambikasaran2014},
+implemented in the {\tt george} \citep{George} python package.} scale as
+$N\ln(N)^2$, where $N$ is the number of data points in the light curve.
 
 \item The flexibility of this GP model allows for insidious kinds of
 posterior multimodality and ``over-fitting''--like behavior.  For example,
-if $l$ is small,  the non-periodic factor in the covariance kernel may dominate,
-allowing for a good fit to the data without requiring any
+if $l$ is small,  the non-periodic factor in the covariance kernel may
+dominate, allowing for a good fit to the data without requiring any
 periodic covariance structure---even if
 clear periodic structure is present.  Additionally, if $\Gamma$ is too large,
 then [explain in more technical terms that ``the GP gets way too wiggly and
@@ -673,7 +672,7 @@ Parameter & Prior & Bounds\\
 \begin{figure*}
 \begin{center}
 % \includegraphics[width=6in, clip=true]{figures/compare_mcmc.pdf}
-\includegraphics[width=6in, clip=true]{figures/comparison_emcee3_13_12_2.png}
+\includegraphics[width=6in, clip=true]{figures/comparison_emcee3_17_1.png}
 \caption{The `true' rotation periods used to generate \naigrain\
 simulated light curves vs the rotation periods measured using the GP
 technique.
@@ -738,7 +737,19 @@ parameters leads to longer MCMC burn in and convergence time), we choose to
 use global parameters only.
 
 Our results show good agreement with the \citet{Mcquillan2014} measurements,
-as shown in ... %\ref{fig:mcquillan}.
+as shown in \ref{fig:mcquillan}.
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=6in, clip=true]{figures/comparison_koi.pdf}
+\caption[Comparison with McQuillan results.]
+{A comparison of our GP rotation period measurements to those of
+\citet{Mcquillan2014}. The results show good agreement. In several cases we
+    measure a rotation period that is half the value reported by
+    \citet{Mcquillan2014}.}
+\label{fig:mcquillan}
+\end{center}
+\end{figure}
 
 At this point it is important to highlight the following caveat.
 Our method has been tuned to reproduce the rotation periods of the
