fixed latex typo with underscore

--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -721,7 +721,7 @@ In order to test this rotation period inference method on real data,
 we applied it to a set of \nkois\ \Kepler\ Object of Interest (KOI)
 host stars, \nkoimcq\ of which had rotation periods previously measured by 
 the ACF method by \citet{Mcquillan2013}.  We use the pipeline-corrected flux 
-(\texttt{pdcsap_flux} column in the \Kepler\ light curve table), median-normalized
+(\texttt{pdcsap\_flux} column in the \Kepler\ light curve table), median-normalized
 and unit-subtracted.  As with the simulated light curves, we randomly subsample each 
 light curve by a factor of 30 and split it into segments of about 300 points
 for the purposes of evaluating the likelihood.  We also follow the same MCMC
