--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -722,7 +722,8 @@ we applied it to a set of \nkois\ \Kepler\ Object of Interest (KOI)
 host stars, \nkoimcq\ of which had rotation periods previously measured by 
 the ACF method by \citet{Mcquillan2013}.  We use the pipeline-corrected flux 
 (\texttt{pdcsap\_flux} column in the \Kepler\ light curve table), median-normalized
-and unit-subtracted.  As with the simulated light curves, we randomly subsample each 
+and unit-subtracted, and mask out all known transiting planet candidate signals.  
+As with the simulated light curves, we randomly subsample each 
 light curve by a factor of 30 and split it into segments of about 300 points
 for the purposes of evaluating the likelihood.  We also follow the same MCMC
 fitting procedure as with the simulated data, using the ACF-based prior as before.
